--- a/home.css
+++ b/home.css
@@ -9,28 +9,14 @@ body{
 
 /*THE ROLLING TITLE*/
 #rotatingText{
-  /*text-align: center;*/
 margin-top: 5%;
 margin-bottom: 3%;
-/*margin-bottom: 3%;*/
 }
 .textParent{
-  /*position: absolute;*/
-  /*width: 220px;*/
-  /*left: 50%;*/
-    /*text-align: center;*/
-  /*margin: 0 auto;*/
   margin-left:29%;
   margin-bottom: -1%;
-  /*margin top:-20%;*/
   margin-top: -2%;
-
 }
- /*achor tag 1000px*/
-/*#rotatingText{
-  margin:0 auto:
-  width:1000px:
-}*/
 
 p{
   font-size: 40px;
@@ -42,7 +28,6 @@ p{
 
 #jessP{
   color: rgb(74,74, 74);
-
 }
 
 .word {
@@ -92,7 +77,6 @@ p{
 
 #section1{
   display:block;
-  /*padding-bottom: 2%;*/
 }
 
 #section2{
@@ -119,9 +103,10 @@ p{
 
 /*speed*/
 .flipper{
-  transition:0.6s;
-  -webkit-transition:0.6s;
-  -moz-transition:0.6s;
+  transition:1s;
+  /*0.6s*/
+  -webkit-transition:1s;
+  -moz-transition:1s;
   -webkit-transform-style:preserve-3d;
   -moz-transform-style:preserve-3d;
   transform-style:preserve-3d;
@@ -152,28 +137,22 @@ p{
   -webkit-transform:rotateY(180deg);
   -moz-transform:rotateY(180deg);
   transform: rotateY(180deg);
-  /*padding: 7%;*/
   font-family: 'Lora', serif;
-  /*font-family: 'Playfair Display', serif;*/
 }
 
 /*//CARDS CENTER OF HOME PAGE.*/
 #cardSection{
 text-align: center;
-/*width:600;
-margin: 0 auto;*/
 }
 
 .liInline{
 display:inline;
 padding: top:5%;
-  /*text-align: left !important;*/
 }
 
 .companyTitle{
   font-size: 35px;
   margin-left: -7%;
-  /*margin-top:20%;*/
 }
 
 .icon{
@@ -200,12 +179,6 @@ padding: top:5%;
 .titleDown{
   margin-top: 10%;
 }
-
-/*.iconPeople{
-  width:55px;
-  padding-left:2%;
-  padding-right:20%;
-}*/
 
 .projectDes{
   font-size: 18px;
@@ -240,7 +213,6 @@ color: rgb(236,233,226);
   box-shadow:none !important;
   text-align: left !important;
   margin-left: 7%;
-  /*was 4%*/
   margin-top: 4%;
 }
 .lightButton{
@@ -254,10 +226,6 @@ color: rgb(236,233,226);
   color:rgb(236,233,226) !important;
 
 }
-.containerLeft{
-/*margin-right: 2%;*/
-}
-
 
 .light{
   background-color: rgb(207,208,203);
@@ -268,30 +236,23 @@ color: rgb(236,233,226);
 }
 
 #octo{
-    /*position: absolute;*/
-
     margin-top:10%;
     width: 290px;
-
 }
 
 #webMd{
-    /*position: absolute;*/
     width: 280px;
     margin-top: 37%;
 }
 
 #beauty{
-    /*position: absolute;*/
     width: 280px;
     margin-top: 20%;
 }
 
 #bunnyEmoji{
-  /*position: absolute;*/
   width: 200px;
   margin-top: 17%;
-
 }
 
 #buttonDiv{
@@ -312,10 +273,3 @@ color: rgb(236,233,226);
   color: rgb(236,233,226) !important;
   font-family: 'Cabin', sans-serif;
 }
-
-
-/*
-.square img {
-  padding-top: 20px;
-  z-index:1;
-}*/
