--- a/webmd.css
+++ b/webmd.css
@@ -4,139 +4,60 @@
 /*INTRODUCTION*/
 /*see project.css*/
 
-/*OUR PROCESS*/
-  .processCircle{
-  background: rgb(01,161,167);
-}
+.titleBackgroundWebMD{
+  background-color: rgb(55,147,195);
+  }
 
-/*APPROACH SECTION*/
-.approachCircle{
-  background-color: rgb(221,98,92);
-}
+.projectLogoWebmd{
+  width:300px;
+  height: 300px;
+  }
 
-/*STRATEGY:FUNNEL SECTION*/
+  .projectTitle{
+    text-align: left;
+    font-size: 30px;
+    width:500px;
+    /*padding-top:20%;*/
+    /*margin-top: 20%;*/
+    /*padding-bottom: -30%;*/
+    /*vertical-align: middle;*/
 
-.funnelLogos{
-  text-align: center;
-  padding-top: 2%;
-}
+  }
+  .projectTitleBox{
+    text-align:left;
+    -moz-text-align: left;
+  }
 
-.competitorLogos{
-  width:250px;
+  .logoAndTitleContainer{
+    margin-left: 20%;
+    padding-top:10.5%;
+  }
+
+.webmdLogoAndTitle{
   display: inline-block;
 }
 
-.cContact, .lNexus{
-    width:300px;
+/*OUR PROCESS*/
+  .processCircle{
+  background-color: rgb(55,147,195);
 }
 
-.logoRow{
-  padding-bottom:1%;
+/*APPROACH SECTION*/
+/*see project.css*/
+.approachCircle{
+    background-color: rgb(55,147,195);
 }
 
-.funnel{
-  text-align: center;
-  width: 300px;
-}
-/*STRATEGY:Competitor Table*/
-.tableGrandparent{
-  text-align: center;
+/*STRATEGY*/
+.swotFly{
+  width:175px;
+  margin-top: -17%;
+  margin-left: 7%;
 }
 
-.tableParent{
-  text-align: center;
-}
-
-.compTable{
-  text-align: left;
-  width:992px;
-  margin: 0 auto;
-}
-
-.compTableTitle{
-  font-size: 40px;
-  text-align: center;
-  color:rgb(01, 161, 167);
-  background:rgb(234,231,231);
-  margin-bottom: 4%;
-  margin-top: 4%;
-  padding-top: 2%;
-  padding-bottom: 2%;
-}
-
-.compTableBar{
-  background-color: rgb(01, 161, 167);
-  color:white;
-  text-align: center;
-}
-
-.compTableText{
-  vertical-align: top;
-  color:rgb(74, 74, 74);
-}
-
-th{
-  text-align: center;
-}
-
-.leftSideTitles{
-background-color: rgb(01, 161, 167);
-color:white;
-padding-left: 1%;
-padding-right:1%;
-}
-
-.weakLine{
-  border-top:solid 1px rgb(74, 74, 74);
-}
-.weakColor{
-background-color:rgb(246, 243, 246);
-}
-
-.weakLineTop{
-  border-top:solid 1px white;
-}
-
-td{
-width:150px;
-font-size: 16px;
-}
-
-.competitorTableLogos{
-  width:110px;
-  vertical-align: bottom;
-}
-.zoomTableLogo{
-  width:75px;
-}
-
-.tierTableLogo{
-  width:90px;
-}
-
-.insideTableLogo {
-width:75px;
-}
-
-.cost{
-  list-style-type: none;
-}
-.table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
-    border-top: none;
-}
-
-.features{
-  text-align: center;
-}
-
-.featureCompImg{
-  width:70%;
-}
-tbody{
-  border-color: 1px solid white;
-}
 
 /*THE RECOMMENDATION CIRCLES*/
+/*see project.css*/
 .circleRecWrapper{
   text-align: center;
 }
@@ -159,46 +80,6 @@ position:relative;
   padding-top:25%;
   padding-left:5%;
   padding-right:5%;
-}
-/*PIE SECTION*/
-.pieIntro{
-  text-align: center;
-  margin-top:3%;
-  /*margin-bottom: 3%;*/
-}
-
-.pieIntroSec{
-  font-size: 20px;
-  display: inline-block;
-  text-align:center;
-}
-.pies{
-  vertical-align:top;
-}
-.pieItem{
-  width:200px;
-  text-align: center;
-}
-
-.pieItem25{
-  width:100px;
-  padding-top: 10%;
-}
-
-.pieIntroSubTitle{
-  font-weight: bold;
-  font-size: 18px;
-}
-.pieText{
-  font-size: 16px;
-}
-
-.operators{
-padding-top: 175px;
-}
-
-.pieSign{
-  width:50px;
 }
 
 /*INTERVIEW & SURVERY SECTION*/
@@ -242,55 +123,6 @@ padding-top: 175px;
    text-align: left;
    vertical-align: top;
  }
-
-/*CIRCLES AND TRIANGLES*/
-.titleP{
-font-size: 24px;
-text-align: center;
-}
-
-.researchCirTri{
-  text-align: center;
-  margin: 0 auto;
-}
-
-.researchCircles {
-  display:inline-block;
-  vertical-align: top;
-}
-
-.circles3{
-  width:400px;
-}
-
-.researchCircles{
-    margin-bottom: 3%;
-    display:inline-block;
-}
-
-/*TRIANGLES*/
-.researchTriangles{
-  display:inline-block;
-  text-align: center;
-  margin-top:1%;
-}
-
-.triangleTextImg{
-  width:450px;
-}
-.triangleSectionDivs{
-  text-align: center;
-}
-
-/*BRAIN */
-.brainBackground{
-  text-align: center;
-}
-
-.brain{
-  padding-top:3%;
-  width: 80%;
-}
 
 /*INTERVIEW COMMENTS*/
 .squareRec{
@@ -355,65 +187,9 @@ text-align: center;
 }
 
 /*THE LINE CONNECTED TO CIRCLE*/
-.findingsCircle1{
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  background-color: rgb(221,98,92);
-  z-index: 2;
-  vertical-align: top;
-  display: inline-block;
-  margin-right:2%;
-}
-
-.findingsCircle {
-  position: relative;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  margin-top: 50px;
-  background-color: rgb(221,98,92);
-  z-index: 2;
-  vertical-align: top;
-  display: inline-block;
-  margin-right:2%;
-}
-
-.findingsCircle:first-child {
-  margin-top: 0;
-}
 
 .findingsCircle:after{
-  position: absolute;
-  background-color: rgb(221,98,92);
-  width: 5px;
-  height: 200%;
-  display: block;
-  content: '';
-  left: 50%;
-  z-index: 1;
-  top: -54px;
-  margin-left: -1px;
-}
-
-.findingsCircle:first-child:before {
-  display: none;
-}
-
-.findings{
-  text-align: center;
-  margin-bottom: 2%;
-}
-.bold700{
-font-weight: 700;
-}
-
-.findingsText{
-  text-align: left;
-  display: inline-block;
-  width:80%;
+  background-color: rgb(133,167,0);
 }
 
 /*SYNTHESIS SECTION*/
@@ -432,172 +208,10 @@ font-weight: 700;
 }
 
 /*PERSONAS*/
-.personaAjayBrad{
-  display:inline-block;
-  font-size: 16px;
-  text-align: center;
-}
-.row{
-margin-left:0;
-margin-right:0;
-}
 
-/*Title for personas*/
-table{
-  display:inline-block;
-}
-
-.personaParent{
-}
-
-.personaTypes{
-  font-size: 30px;
-}
-
-.textBoxName{
-text-align: left;
-margin: 5px;
-}
-
-.ajayName{
-  background-color: rgb(01, 161, 167);
-  color:white;
-}
-
-.textBoxQuote{
-  width:115px;
-  height:175px;
-  margin: 5px;
-  vertical-align: top;
-  font-style: italic;
-}
-
-.boxTitles{
-  font-weight: bold;
-}
-.padding{
-  padding-top: 2%;
-  padding-left:2%;
-  padding-right: 2%;
-}
-
-.textBoxQuoteAjay{
-background-color: rgb(213,245,242);
-padding-top: 5%;
-}
-.textBoxQuoteBrad{
-  background-color: rgb(248,216,213);
-  padding-top: 3%;
-}
-
-.textBoxGoals{
-  width:175px;
-  height:200px;
-  background-color: rgb(222,225,225);
-  text-align: left;
-  margin: 5px;
-  vertical-align: top;
-}
-
-.textBoxFrustrations{
-  width:240px;
-  height:200px;
-  color:white;
-  background-color: rgb(74, 74, 74);
-  text-align: left;
-  margin: 5px;
-  vertical-align: top;
-}
-
-.textBoxTech{
-  background-color: rgb(246, 243, 246);
-  text-align: left;
-  margin: 5px;
-  vertical-align: top;
-  width:115px;
-  height:200px;
-  padding: 1%;
-}
-
-.textBoxNameBrad{
-  background-color: rgb(221, 98, 92);
-  color: white;
-}
-
-td{
-  border: 10px solid white;
-}
-.personaParent{
-  text-align: center;
-}
-
-/*for comp table and personas*/
-table{
-  border: 20px solid white;
-  text-align: center;
-}
-
-/*images*/
-.brad, .ajay{
-min-width:173px;
-max-width:100%;
-max-height:100%;
-vertical-align: top;
-border: 0;
-}
-
-.ajayTd{
-  background-color: rgb(218, 217, 215)
-}
-
-.bradTd{
-  background-color: rgb(99, 100, 94)
-}
-
-/*USER FLOW*/
-.bracketDiv{
-  display: block;
-  margin-top: 4%;
-}
-
-.userBracket{
-  margin:3%;
-  width:350px;
-  margin-left: 10%;
-}
-
-.userFlowTitle{
-  margin-bottom: 8%;
-}
-
-.userFlow{
-  text-align: center;
-  margin-top: 4%;
-}
-
-.userFlowImg{
-  width:70%;
-  margin-top: -5%;
-}
 
 /*SYNTHESIS: REDEFINE PROBLEM*/
-.problem{
-  text-align: center;
-}
 
-.bullet{
-text-align: center;
-padding:1%;
-}
-
-.problemTitle{
-  font-size: 30px;
-}
-
-.problemText{
-  font-size: 24px;
-  margin-top: 0.5%;
-}
 
 /*see design decisons below for circle/number code*/
 
