--- a/about.css
+++ b/about.css
@@ -4,6 +4,7 @@
   /*z-index: 2;*/
   background-image:url("myimages/about/me-small.jpg");
   height: 710px;
+  width:100%:
   /*position:sticky;*/
 }
 
