--- a/about.css
+++ b/about.css
@@ -4,7 +4,7 @@
   /*z-index: 2;*/
   background-image:url("myimages/about/me-small.jpg");
   height: 710px;
-  width:100%:
+  width:1250px;
   /*position:sticky;*/
 }
 
