--- a/about.css
+++ b/about.css
@@ -4,7 +4,8 @@
   /*z-index: 2;*/
   background-image:url("myimages/about/me-small.jpg");
   height: 710px;
-  width:1250px;
+  /*width:1250px;*/
+  width:100%;
   /*position:sticky;*/
 }
 
