--- a/about.css
+++ b/about.css
@@ -5,7 +5,7 @@
   background-image:url("myimages/about/me-small.jpg");
   height: 710px;
   /*width:1250px;*/
-  width:100%;
+  /*width:100%;*/
   /*position:sticky;*/
 }
 
