--- a/webmd.css
+++ b/webmd.css
@@ -49,12 +49,36 @@
 }
 
 /*STRATEGY*/
+/*SWOT*/
 .swotFly{
   width:175px;
   margin-top: -17%;
   margin-left: 7%;
 }
 
+.swot{
+  text-align: center;
+}
+
+.swotTitle{
+  font-size: 30px;
+  /*font-weight:bold;*/
+}
+
+.swotRec{
+  width: 450px;
+  height:270px;
+  border-radius: 6%;
+  color: white;
+  text-align: left;
+  margin: 2%;
+  padding: 2%;
+  vertical-align: top;
+}
+
+.strengthWeak, .oppThreats{
+  display: inline-block;
+}
 
 /*THE RECOMMENDATION CIRCLES*/
 /*see project.css*/
