--- a/home.css
+++ b/home.css
@@ -1,4 +1,14 @@
 /*JESSICA DAVIES UX DESIGN HOME PAGE*/
+/*bootstrapfix*/
+html{
+overflow-x: hidden;
+}
+
+/*bootstrap fix*/
+.footRow{
+  margin:0;
+}
+
 body{
   background:url(myimages/home/clouds.jpg) no-repeat center center fixed;
   -webkit-background-size:cover;
