--- a/webmd.css
+++ b/webmd.css
@@ -4,24 +4,25 @@
 /*INTRODUCTION*/
 /*see project.css*/
 
-.titleBackgroundWebMD{
-  background-color: rgb(55,147,195);
-  }
-
 .projectLogoWebmd{
-  width:300px;
+  width:260px;
   height: 300px;
   }
 
   .projectTitle{
-    text-align: left;
     font-size: 30px;
-    width:500px;
+    text-align: left;
     /*padding-top:20%;*/
     /*margin-top: 20%;*/
     /*padding-bottom: -30%;*/
     /*vertical-align: middle;*/
+  }
 
+  .projectSubTitle{
+    text-align: left;
+    font-size:24px;
+    width: 500px;
+    color:white;
   }
   .projectTitleBox{
     text-align:left;
@@ -29,8 +30,8 @@
   }
 
   .logoAndTitleContainer{
-    margin-left: 20%;
-    padding-top:10.5%;
+    margin-left: 15%;
+    padding-top:11%;
   }
 
 .webmdLogoAndTitle{
@@ -113,6 +114,7 @@ position:relative;
 
 /*RESEARCH*/
 /*INTERVIEW & SURVERY SECTION*/
+/*Introduction to research section*/
 .researchSummaryDiv{
   text-align: center;
 }
@@ -121,9 +123,68 @@ position:relative;
   width:80%;
 }
 
-.surveyAndInterview{
-  margin-bottom: 3%;
+/*survey results section*/
+/*INITAL SURVEY AND INTERVIEW RESULTS*/
+.surveyResultsP{
+  text-align: left;
+  width: 80%;
+  margin:0 auto;
 }
+.surveyResults{
+  width:100%;
+  text-align: center;
+}
+
+.surveyResultsSec{
+  text-align: center;
+  width:100%;
+}
+
+.surveyConclusion{
+  width:300px;
+  height:300px;
+  border-radius: 50%;
+  display: inline-block;
+  margin:5%;
+  /*margin-left: -10%;*/
+  font-size: 30px;
+  vertical-align: middle;
+}
+
+/*.surveyConclusionFix{
+  height:178px;
+}*/
+
+.surveyCircles{
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.surveyCirclesImg{
+    width:450px;
+}
+
+.surveyQuotes{
+  display: inline-block;
+  text-align: left;
+  width:450px;
+  vertical-align: middle;
+}
+
+.surveyConclusionText{
+  /*vertical-align: middle;*/
+  margin-top: 35%;
+  color: white;
+}
+
+.surveyConclusion2{
+  margin-left:15%;
+}
+
+/*other interview insights*/
+/*.surveyAndInterview{
+  margin-bottom: 3%;
+}*/
 .researchPeepsContainer{
   text-align: center;
 }
@@ -155,16 +216,22 @@ position:relative;
 .width{
   width: 200px;
 }
- .researchDes{
-   width: 450px;
+
+.researchDes{
+   width: 80%;
+    /*width: 450px;*/
    text-align: left;
    vertical-align: top;
- }
+}
 
 /*INTERVIEW COMMENTS*/
-.squareRec{
-  margin:5%;
+.squareRecSec{
+  display: inline-block;
+  /*margin-bottom: 5%;*/
+  vertical-align: top;
 }
+
+
 
 .rec {
   width: 200px;
@@ -175,49 +242,20 @@ position:relative;
   text-align:left;
 }
 
-.rec1{
-  background-color: rgb(214,245, 242);
-}
-
-.rec2{
-  background-color: rgb(246,243,246);
-}
-
-.rec3{
-
-  background-color: rgb(137,229,223);
-}
-
-.rec4{
-  background-color: rgb(74, 74, 74);
-  color:white;
-}
-
-.rec5{
-  background-color: rgb(01,161,167);
-  color:white;
+.recPaddimg{
+  padding:2%;
 }
 
 .square{
   width: 200px;
-  height: 200px;
+  /*height: 300px;*/
   text-align: center;
-  padding: 5%;
-  margin-bottom: 10%;
+  padding: 3%;
+  /*margin-bottom: 10%;*/
 }
-
-.recPaddimg{
-  padding-right:2%;
-}
-
 .squareRec{
+  /*margin:3%;*/
   text-align: center;
-}
-
-.squareRecSec{
-  display: inline-block;
-  margin-bottom: 4%;
-  vertical-align: top;
 }
 
 .faceCircles{
@@ -227,7 +265,7 @@ position:relative;
 /*THE LINE CONNECTED TO CIRCLE*/
 
 .findingsCircle:after{
-  background-color: rgb(133,167,0);
+  background-color: rgb(169,204,96);
 }
 
 /*SYNTHESIS SECTION*/
