--- a/webmd.css
+++ b/webmd.css
@@ -74,10 +74,10 @@
 .swotRec{
   width: 450px;
   height:270px;
-  border-radius: 6%;
+  /*border-radius: 3%;*/
   color: white;
   text-align: left;
-  margin: 2%;
+  margin: 1%;
   padding: 2%;
   vertical-align: top;
 }
