--- a/nav.css
+++ b/nav.css
@@ -34,6 +34,12 @@
   display: inline;
 }
 
+@media (max-width: 767px){
+  .homeBarli{
+  font-weight: bold;
+  }
+}
+
 li a{
     text-decoration: none !important;
     color: rgb(74, 74, 74) !important;
