--- a/webmd.css
+++ b/webmd.css
@@ -339,7 +339,7 @@ position:relative;
 }
 
 /*SYNTHESIS SECTION*/
-/*JOURNEY MAP*/
+/*AFFINITY MAP*/
 
 .centerJMap{
   text-align: center;
@@ -353,18 +353,36 @@ position:relative;
   width:100%;
 }
 
+.painPoints{
+  font-size: 24px;
+  text-align: center;
+}
+
 /*SYNTHESIS SECTION*/
 /*STORY BOARD*/
+
+.storyboardTitle{
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.storyboardSubtitle{
+  font-size: 24px;
+  background:rgb(246,243,246);
+  margin-bottom: 0;
+  text-align: center;
+  padding-bottom:2%
+}
 
 .storyBoardDiv{
   text-align: center;
 }
 
-.storyBoardSub{
+/*.storyBoardSub{
   font-size: 24px;
   text-align: center;
-  margin-bottom: 3%;
-}
+  /*margin-bottom: 3%;
+}*/
 
 .storyBoard{
   width:100%;
@@ -373,11 +391,18 @@ position:relative;
 
 /*SYNTHESIS*/
 /*PERSONAS*/
-.personaAjayBrad{
-  display:inline-block;
-  font-size: 16px;
-  text-align: center;
+
+.statementPersonas{
+  margin-top: 0%;
 }
+
+.personas{
+  /*display:inline-block;*/
+  font-size: 16px;
+  /*text-align: center;*/
+}
+
+
 .row{
 margin-left:0;
 margin-right:0;
@@ -392,10 +417,6 @@ table{
   font-size: 30px;
 }
 
-.ajayName{
-  background-color: rgb(01, 161, 167);
-  color:white;
-}
 
 /*.textBoxQuote{
   width:115px;
@@ -432,9 +453,9 @@ vertical-align: top;
 border: 0;
 }
 
-.sharon{
-  width:150px;
-  height:182px;
+.personaImg{
+  width:166px;
+  height:190px;
 }
 
 .textBoxGoals{
@@ -490,9 +511,9 @@ table{
 }
 
 
-.ajayTd{
+/*.ajayTd{
   background-color: rgb(218, 217, 215)
-}
+}*/
 
 .bradTd{
   background-color: rgb(99, 100, 94)
@@ -542,6 +563,11 @@ TWO EXPERIENCES*/
   width: 160px;
   margin-top: 1%;
 }
+
+.iwatch{
+    width: 100px;
+}
+
 @media (min-width: 940px) and (max-width: 1049px){
 
   .experienceTextiWatch{
@@ -549,12 +575,16 @@ TWO EXPERIENCES*/
   }
   .realTimeAndNuriWatch{
     display: block;
+    text-align: center;
   }
+
+  .iwatch{
+    margin-left: -20%;
+
+  }
+
 }
 
-.iwatch{
-    width: 100px;
-}
 
 .experienceTitle{
   font-size: 30px;
@@ -651,7 +681,6 @@ text-align: center;
 }
 
 /*User Testing*/
-
 .testingCircleSec{
   text-align: center;
 }
@@ -825,9 +854,9 @@ DESIGN DECISIONS*/
 
 
 .problemTitle{
-  width:90%;
+  width:80%;
   margin:0 auto;
-  text-align: left;
+  /*text-align: left;*/
 }
 
 @media (max-width:711px) {
